# metaschema

./: CMakeLists.txt  README.md
include/wallaby/: types.hh  wallaby.hh  wallaby_impl.hh
src/: wallaby.cc
test/: basic_usage.cc  instance_test.xml  plugin_test.wl  plugin_test.xml  schema_test.wl
